--- a/archive/docs/00.二开指南/01.指南/13.项目常用注解.md
+++ b/archive/docs/00.二开指南/01.指南/13.项目常用注解.md
@@ -91,6 +91,219 @@ permalink: /pages/2e0e5f/
         <font style="color: red;">领域事件日志</font></td>
       <td style="text-align: left;">@CommandLog</td>
 	</tr>
+    <tr>
+      <td style="text-align: left;">
+        <font style="color: green;">
+          <strong>@GrpcClient</strong></font>
+      </td>
+      <td style="text-align: left;">
+        <font style="color: red;">gRpc客户端</font></td>
+      <td style="text-align: left;">@GrpcClient(serviceId = "laokou-common-grpc")</td>
+	</tr>
+    <tr>
+      <td style="text-align: left;">
+        <font style="color: green;">
+          <strong>@Entity</strong></font>
+      </td>
+      <td style="text-align: left;">
+        <font style="color: red;">领域对象</font></td>
+      <td style="text-align: left;">@Entity</td>
+	</tr>
+    <tr>
+      <td style="text-align: left;">
+        <font style="color: green;">
+          <strong>@Idempotent</strong></font>
+      </td>
+      <td style="text-align: left;">
+        <font style="color: red;">API幂等</font></td>
+      <td style="text-align: left;">@Idempotent</td>
+	</tr>
+    <tr>
+      <td style="text-align: left;">
+        <font style="color: green;">
+          <strong>@Lock4j</strong></font>
+      </td>
+      <td style="text-align: left;">
+        <font style="color: red;">分布式锁</font></td>
+      <td style="text-align: left;">
+		@Lock4j(name="order", key="#userId", type=Type.LOCK)
+		<br>
+		<br>
+		@Lock4j(name="order", key="#userId", type=Type.FAIR_LOCK)
+		<br>
+		<br>
+		@Lock4j(name="order", key="#userId", type=Type.READ_LOCK)
+		<br>
+		<br>
+		@Lock4j(name="order", key="#userId", type=Type.WRITE_LOCK)
+		<br>
+		<br>
+		@Lock4j(name="order", key="#userId", type=Type.FENCED_LOCK)
+	  </td>
+	</tr>
+    <tr>
+      <td style="text-align: left;">
+        <font style="color: green;">
+          <strong>@OperateLog</strong></font>
+      </td>
+      <td style="text-align: left;">
+        <font style="color: red;">操作日志</font></td>
+      <td style="text-align: left;">@OperateLog(module = "用户管理", operation = "保存用户")</td>
+	</tr>
+    <tr>
+      <td style="text-align: left;">
+        <font style="color: green;">
+          <strong>@DataFilter</strong></font>
+      </td>
+      <td style="text-align: left;">
+        <font style="color: red;">数据权限</font></td>
+      <td style="text-align: left;">@DataFilter</td>
+	</tr>
+    <tr>
+      <td style="text-align: left;">
+        <font style="color: green;">
+          <strong>@EnableRouter</strong></font>
+      </td>
+      <td style="text-align: left;">
+        <font style="color: red;">开启服务路由打印</font></td>
+      <td style="text-align: left;">@EnableRouter</td>
+	</tr>
+    <tr>
+      <td style="text-align: left;">
+        <font style="color: green;">
+          <strong>@RateLimiter</strong></font>
+      </td>
+      <td style="text-align: left;">
+        <font style="color: red;">API限流</font></td>
+      <td style="text-align: left;">
+		@RateLimiter(key = "GET_CAPTCHA", type = Type.IP)
+		<br>
+		<br>
+		@RateLimiter(key = "GET_CAPTCHA", type = Type.DEFAULT)
+		<br>
+		<br>
+		@RateLimiter(key = "GET_CAPTCHA", type = Type.PATH)
+		<br>
+		<br>
+		@RateLimiter(key = "GET_CAPTCHA", type = Type.USER)
+		<br>
+		<br>
+		@RateLimiter(key = "GET_CAPTCHA", type = Type.TENANT)
+	  </td>
+	</tr>
+    <tr>
+      <td style="text-align: left;">
+        <font style="color: green;">
+          <strong>@EnableApiSecret</strong></font>
+      </td>
+      <td style="text-align: left;">
+        <font style="color: red;">开启API鉴权</font></td>
+      <td style="text-align: left;">@EnableApiSecret</td>
+	</tr>
+    <tr>
+      <td style="text-align: left;">
+        <font style="color: green;">
+          <strong>@ApiSecret</strong></font>
+      </td>
+      <td style="text-align: left;">
+        <font style="color: red;">API鉴权</font></td>
+      <td style="text-align: left;">@ApiSecret</td>
+	</tr>
+    <tr>
+      <td style="text-align: left;">
+        <font style="color: green;">
+          <strong>@Sensitive</strong></font>
+      </td>
+      <td style="text-align: left;">
+        <font style="color: red;">敏感词过滤</font></td>
+      <td style="text-align: left;">
+		@Sensitive(type=SensitiveType.MAIL)
+		<br>
+		<br>
+		@Sensitive(type=SensitiveType.MOBILE)
+	  </td>
+	</tr>
+    <tr>
+      <td style="text-align: left;">
+        <font style="color: green;">
+          <strong>@Domain</strong></font>
+      </td>
+      <td style="text-align: left;">
+        <font style="color: red;">领域事件数据源</font></td>
+      <td style="text-align: left;">@Domain</td>
+	</tr>
+    <tr>
+      <td style="text-align: left;">
+        <font style="color: green;">
+          <strong>@Generator</strong></font>
+      </td>
+      <td style="text-align: left;">
+        <font style="color: red;">代码生成数据源</font></td>
+      <td style="text-align: left;">@Generator</td>
+	</tr>
+    <tr>
+      <td style="text-align: left;">
+        <font style="color: green;">
+          <strong>@Iot</strong></font>
+      </td>
+      <td style="text-align: left;">
+        <font style="color: red;">Iot数据源</font></td>
+      <td style="text-align: left;">@Iot</td>
+	</tr>
+    <tr>
+      <td style="text-align: left;">
+        <font style="color: green;">
+          <strong>@Master</strong></font>
+      </td>
+      <td style="text-align: left;">
+        <font style="color: red;">默认数据源</font></td>
+      <td style="text-align: left;">@Master</td>
+	</tr>
+    <tr>
+      <td style="text-align: left;">
+        <font style="color: green;">
+          <strong>@TraceLog</strong></font>
+      </td>
+      <td style="text-align: left;">
+        <font style="color: red;">分布式链路信息</font></td>
+      <td style="text-align: left;">@TraceLog</td>
+	</tr>
+    <tr>
+      <td style="text-align: left;">
+        <font style="color: green;">
+          <strong>@EnableWebSocketServer</strong></font>
+      </td>
+      <td style="text-align: left;">
+        <font style="color: red;">开启Websocket Server</font></td>
+      <td style="text-align: left;">@EnableWebSocketServer</td>
+	</tr>
+    <tr>
+      <td style="text-align: left;">
+        <font style="color: green;">
+          <strong>@EnableXss</strong></font>
+      </td>
+      <td style="text-align: left;">
+        <font style="color: red;">开启XSS过滤</font></td>
+      <td style="text-align: left;">@EnableXss</td>
+	</tr>
+    <tr>
+      <td style="text-align: left;">
+        <font style="color: green;">
+          <strong>@Xss</strong></font>
+      </td>
+      <td style="text-align: left;">
+        <font style="color: red;">XSS过滤</font></td>
+      <td style="text-align: left;">@Xss</td>
+	</tr>
+    <tr>
+      <td style="text-align: left;">
+        <font style="color: green;">
+          <strong>@XssSql</strong></font>
+      </td>
+      <td style="text-align: left;">
+        <font style="color: red;">XSS过滤SQL</font></td>
+      <td style="text-align: left;">@XssSql</td>
+	</tr>
   </tbody>
 </table>
 
