--- a/archive/docs/00.二开指南/01.指南/15.Spring Cloud Alibaba配置.md
+++ b/archive/docs/00.二开指南/01.指南/15.Spring Cloud Alibaba配置.md
@@ -55,7 +55,7 @@ spring:
         heart-beat-timeout: 30000
 ```
 
-> **💡 提示：** 使用环境变量（`${NACOS-DISCOVERY-ADDRESS}`）可使同一份配置在不同环境中复用，仅需在启动参数或 `.env` 文件中切换。
+> **💡 提示：** 使用环境变量（`${NACOS_DISCOVERY_ADDRESS:nacos:8848}`）可使同一份配置在不同环境中复用，仅需在启动参数或 `.env` 文件中切换。
 
 ---
 
