feat: 增加授权范围

--- a/archive/docs/00.二开指南/01.指南/13.项目常用注解.md
+++ b/archive/docs/00.二开指南/01.指南/13.项目常用注解.md
@@ -33,10 +33,10 @@ permalink: /pages/2e0e5f/
         <font style="color: red;">Spring Security根据XXX权限标识鉴权</font>
 	  </td>
       <td style="text-align: left;">
-		@PreAuthorize("hasAuthority('sys:user:save')")
+		@PreAuthorize("@permissionService.has('sys:user:save')")
 		<br>
         <br>
-        @PreAuthorize("(hasAuthority('sys:oss:upload') or hasAuthority('sys:oss:save')) and hasAuthority('sys:user:modify')")
+        @PreAuthorize("(@permissionService.has('sys:oss:upload') or @permissionService.has('sys:oss:save')) and @permissionService.has('sys:user:modify')")
       </td>
 	</tr>
     <tr>
